# awm

./: .gitignore  .travis.yml  MANIFEST.in  README.rst  awm.config.json  setup.cfg  tox.ini
awm/common/: config.py  exception.py  kafka_utils.py  result.py
awm/crawler/: __init__.py
awm/persister/: __init__.py
awm/tests/unit/: test_crawler.py  test_kafka_utils.py  test_result.py
docs/: requirements.txt
docs/source/: conf.py  config.rst  crawler.rst  index.rst  installation.rst  persister.rst  todo.rst
packaging/: awm-crawler.service  awm-persister.service  awm.spec  system-user-awm.conf
