[metadata]
name = awm
url = https://github.com/toabctl/awm
author = Thomas Bechtold
author_email = thomasbechtold@jpberlin.de
license = Apache-2.0
long-description = README.rst
classifiers =
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8

[options]
package_dir=
  =.
packages = find:
install_requires =
  aiohttp
  aiokafka
  aiopg
  python-dateutil
setup_requires =
  setuptools_scm
  
[options.extras_require]
docs =
  Sphinx
  doc8
  sphinxcontrib-programoutput
tests =
  pytest
  flake8
  mypy
  pytest-asyncio
  aioresponses

[options.entry_points]
console_scripts =
  awm-crawler = awm.crawler:main
  awm-persister = awm.persister:main
